// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer should render components list layout 1`] = `
<div>
  <ReactComponent
    component={
      {
        "filepath": "components/foo.js",
        "name": "Foo",
        "pathLine": "components/foo.js",
        "props": {
          "description": "Foo foo",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    usageMode="collapse"
  />
  <ReactComponent
    component={
      {
        "filepath": "components/bar.js",
        "name": "Bar",
        "pathLine": "components/bar.js",
        "props": {
          "description": "Bar bar",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    usageMode="collapse"
  />
</div>
`;

exports[`should render components list 1`] = `
<ComponentsRenderer>
  <ReactComponent
    component={
      {
        "filepath": "components/foo.js",
        "name": "Foo",
        "pathLine": "components/foo.js",
        "props": {
          "description": "Foo foo",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    usageMode="collapse"
  />
  <ReactComponent
    component={
      {
        "filepath": "components/bar.js",
        "name": "Bar",
        "pathLine": "components/bar.js",
        "props": {
          "description": "Bar bar",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    usageMode="collapse"
  />
</ComponentsRenderer>
`;
